--- a/new2.html
+++ b/new2.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html lang="vivi">
+<html lang="vi">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>dự án 44</title>
+    <title>New2New2</title>
   </head>
   <body>
-    <h1>dự án 44</h1>
-    <h2>sửa lần 1</h2>
+    <h1>new 1</h1>
   </body>
 </html>
